# mediheal

./: .env.example  .gitignore  DEVELOPMENT_ROADMAP.md  LICENSE  TASK_TRACKER.md  app.json  eslint.config.js  global.css  init_backend.py  init_mobile.sh  package.json  setup_dev_environment.sh  tailwind.config.js
.github/workflows/: ci.yml
backend/: .gitignore  README.md  check_db.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2456c00a674f_initial_migration_with_user_model.py  c91ce9637dee_add_program_session_userprogress_.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  programs.py  progress.py  sessions.py  subscriptions.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  analytics.py  program.py  progress.py  session.py  subscription.py  user.py
backend/app/schemas/: auth.py  program.py  progress.py  session.py  user.py
backend/scripts/: seed_db.py
backend/tests/: verify_implementation.py
backend/tests/api/: test_health.py
src/: file.html
src/app/: _layout.tsx
src/app/(tabs)/: _layout.tsx  index.tsx  profile.tsx
src/app/auth/: login.tsx
src/app/dev/: _layout.tsx  index.tsx
src/components/: ThemeProvider.tsx  providers.tsx
src/components/ui/: index.ts
src/hooks/: use-app-color-scheme.ts  use-login-form.ts
src/lib/: constants.ts  query-client.ts  sentry.ts  storage.ts  theme.ts
src/lib/i18n/: index.ts
src/lib/i18n/locales/: en.json  (+1 more)
src/services/: api.ts
src/stores/: app-store.ts  theme-store.ts
(+38 files in other folders)
